outputs_20260328-212505-894b4386/codegen/production/build_logs/compiler_stderr.log
C:\Users\extsiyv\AppData\Local\Temp\tdd_build__evb591b\src\egtm_atom_3_phase_inverter_pwm.c: In function 'initEgtmAtom3phInv':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build__evb591b\src\egtm_atom_3_phase_inverter_pwm.c:133:26: error: 'IfxSrc_VmId_0' undeclared (first use in this function); did you mean 'IfxSrc_VmId'?
  133 |     irqCfg.vmId        = IfxSrc_VmId_0;
      |                          ^~~~~~~~~~~~~
      |                          IfxSrc_VmId
C:\Users\extsiyv\AppData\Local\Temp\tdd_build__evb591b\src\egtm_atom_3_phase_inverter_pwm.c:133:26: note: each undeclared identifier is reported only once for each function it appears in

C:\Users\extsiyv\AppData\Local\Temp\tdd_build__evb591b\test\test_egtm_atom_3_phase_inverter_pwm.c: In function 'test_TC_G6_002_after_wrap_post_step_value_equals_step_for_each_phase':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build__evb591b\test\test_egtm_atom_3_phase_inverter_pwm.c:297:5: error: unknown type name 'bool'
  297 |     bool wrappedSeen[3] = { false, false, false };
      |     ^~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build__evb591b\test\test_egtm_atom_3_phase_inverter_pwm.c:4:1: note: 'bool' is defined in header '<stdbool.h>'; this is probably fixable by adding '#include <stdbool.h>'
    3 | #include "egtm_atom_3_phase_inverter_pwm.h"
  +++ |+#include <stdbool.h>
    4 | 
C:\Users\extsiyv\AppData\Local\Temp\tdd_build__evb591b\test\test_egtm_atom_3_phase_inverter_pwm.c:297:29: error: 'false' undeclared (first use in this function)
  297 |     bool wrappedSeen[3] = { false, false, false };
      |                             ^~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build__evb591b\test\test_egtm_atom_3_phase_inverter_pwm.c:297:29: note: 'false' is defined in header '<stdbool.h>'; this is probably fixable by adding '#include <stdbool.h>'
C:\Users\extsiyv\AppData\Local\Temp\tdd_build__evb591b\test\test_egtm_atom_3_phase_inverter_pwm.c:297:29: note: each undeclared identifier is reported only once for each function it appears in
C:\Users\extsiyv\AppData\Local\Temp\tdd_build__evb591b\test\test_egtm_atom_3_phase_inverter_pwm.c:314:34: error: 'true' undeclared (first use in this function)
  314 |                 wrappedSeen[i] = true;
      |                                  ^~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build__evb591b\test\test_egtm_atom_3_phase_inverter_pwm.c:314:34: note: 'true' is defined in header '<stdbool.h>'; this is probably fixable by adding '#include <stdbool.h>'
